# migasfree-imports

./: .gitignore  README.md  create-deployments.py  external-deployment.py  import-project.py  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md
docs/explanation/: architecture.md
docs/how-to/: import_project.md
docs/reference/: api.md  cli.md
docs/tutorials/: getting_started.md
libs/: migasfreeimport.py  utils.py
migasfree_imports/: __main__.py  client.py  importer.py  utils.py
templates/: distro_base
templates/applications/: applications
templates/deployments/: debian_11  debian_12  ubuntu_22  ubuntu_24
templates/external-deployments/: debian_11  debian_12  ubuntu_22  ubuntu_24
tests/: test_client.py  test_importer.py  test_utils.py
