[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "migasfree-imports"
version = "0.1.0"
description = "Tools to import migasfree projects"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPLv3"}
authors = [
    {name = "Alberto Gacías", email = "alberto@migasfree.org"},
    {name = "Jose Antonio Chavarría", email = "jachavar@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
]
dependencies = [
    "requests",
    "beautifulsoup4",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
]

[project.scripts]
migasfree-import = "migasfree_imports.__main__:main"

[project.urls]
Homepage = "https://migasfree.org/"
Repository = "https://github.com/migasfree/migasfree-imports/"

[tool.setuptools]
packages = {find = {where = ["."], include = ["migasfree_imports*"]}}

[tool.ruff]
line-length = 120
target-version = "py38"
exclude = ["build"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "RUF012"
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
